# coppermind-rag

./: README.md  main.py  make_faiss_index.py  pyproject.toml
storage/: index_store.json
