[project]
name = "coppermind-rag"
version = "0.1.0"
description = "RAG based on the coppermind wiki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.44",
    "faiss-cpu>=1.11.0",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-readers-file>=0.4.9",
    "llama-index-vector-stores-faiss>=0.4.0",
    "python-dotenv>=1.1.1",
]
